Add Marathi bird guide HTML conversion and styling; update LaTeX layout

--- a/latex/bird_guide.tex
+++ b/latex/bird_guide.tex
@@ -93,7 +93,7 @@
       \IfFileExists{../images/#9}{%
         \includegraphics[width=0.95\textwidth,height=0.8\textheight,keepaspectratio]
         {../images/#9}%
-        \par\vspace{0.5em}% Increased from -1em to 0.5em for more space
+        \par\vspace{-1em}%
         \getcreditname{#9}%
         \hfill{\small\em Credit: \input{../images/\creditfile}}%
       }{%
@@ -170,28 +170,8 @@
 % Copyright notice
 \begin{center}
 \vspace{1cm}
-{\large This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC BY-NC-SA 4.0).}
-
-\vspace{0.5cm}
-{\normalsize You are free to:
-\begin{itemize}
-\item Share -- copy and redistribute the material in any medium or format
-\item Adapt -- remix, transform, and build upon the material
-\end{itemize}
-
-Under the following terms:
-\begin{itemize}
-\item Attribution -- You must give appropriate credit, provide a link to the license, and indicate if changes were made.
-\item NonCommercial -- You may not use the material for commercial purposes.
-\item ShareAlike -- If you remix, transform, or build upon the material, you must distribute your contributions under the same license.
-\end{itemize}
-}
-
-\vspace{0.5cm}
-{\small For more information, visit: \url{https://creativecommons.org/licenses/by-nc-sa/4.0/}}
-
-\vspace{1cm}
-{\large\textcopyright{} 2024 Yogesh Wadadekar (wadadekar@gmail.com)}
+{\large\textcopyright{} 2024 Yogesh Wadadekar (wadadekar@gmail.com)}\\
+All rights reserved.
 \end{center}
 
 % Table of contents
@@ -306,24 +286,6 @@ Under the following terms:
   {Often seen soaring high in the sky, searching for prey. Feeds on small mammals, birds, and carrion.}
   {Breeds December to April. Builds nests in tall trees, using sticks and other plant materials. Lays 2-3 whitish eggs with brown spots. Both parents incubate for about 30 days and care for young.}
   {black-kite.jpg}
-
-\birdentry{Red-naped Ibis}{\textit{Pseudibis papillosa}}
-  {Kite-}
-  {Common resident}
-  {Large black bird with red patch on nape. Long curved bill and bare red patch on crown distinctive.}
-  {Found in open areas, grasslands and waterbodies across campus.}
-  {Walks deliberately while foraging. Usually in small groups. Probes soil for insects and small vertebrates.}
-  {Breeds mainly during monsoon. Builds platform nest in large trees. Lays 2-4 pale bluish-white eggs.}
-  {red-naped-ibis.jpg}
-
-\birdentry{Peregrine Falcon}{\textit{Falco peregrinus}}
-  {Kite-}
-  {Uncommon winter visitor}
-  {Large, powerful falcon with dark grey upperparts, barred underparts, and distinctive black 'moustache' marking.}
-  {Occasionally seen around tall buildings and open areas of campus.}
-  {Swift and agile hunter, known for spectacular aerial dives. Feeds mainly on birds caught in flight.}
-  {Does not breed on campus; winter visitor only.}
-  {peregrine-falcon.jpg}
 
 \birdentry{Shikra}{\textit{Accipiter badius}}
   {Myna+}
@@ -487,15 +449,6 @@ Under the following terms:
   {Colonial nester, builds mud nests under building eaves and bridges. Lays 2-3 white eggs. Both parents incubate for about 19-21 days and care for the chicks.}
   {house-swift.jpg}
 
-\birdentry{Asian Palm Swift}{\textit{Cypsiurus balasiensis}}
-  {Sparrow-}
-  {Common resident}
-  {Smaller than House Swift, slender with deeply forked tail. Overall sooty brown appearance.}
-  {Found around palm trees across campus.}
-  {Very fast flier, rarely perches. Often seen around palm trees. Feeds exclusively on aerial insects.}
-  {Breeds year-round. Attaches small nest to palm frond underside using saliva. Lays 2-3 white eggs.}
-  {asian-palm-swift.jpg}
-
 \birdentry{White-breasted Kingfisher}{\textit{Halcyon smyrnensis}}
   {Myna+}
   {Common resident}
@@ -504,24 +457,6 @@ Under the following terms:
   {Perches prominently, diving for prey. Feeds on fish, frogs, lizards, and large insects.}
   {Breeds March to June. Nests in horizontal tunnels dug in earth banks. Lays 4-7 white eggs. Both parents share incubation duties for about 20-22 days and care for the chicks.}
   {white-breasted-kingfisher.jpg}
-
-\birdentry{Common Kingfisher}{\textit{Alcedo atthis}}
-  {Bulbul-}
-  {Common resident}
-  {Small kingfisher with brilliant blue upperparts and orange underparts. Long bill and short tail.}
-  {Found near water bodies and ponds on campus.}
-  {Perches low over water, dives vertically for fish. Often bobs head before striking.}
-  {Breeds February to April. Nests in tunnel in earth bank. Lays 5-7 white eggs.}
-  {common-kingfisher.jpg}
-
-\birdentry{Asian Green Bee-eater}{\textit{Merops orientalis}}
-  {Sparrow+}
-  {Common resident}
-  {Slender green bird with blue throat patch and black eye-stripe. Long central tail feathers distinctive.}
-  {Found in open areas with scattered trees across campus.}
-  {Graceful aerial hunter, catches insects in flight. Often perches prominently on wires or bare branches.}
-  {Breeds March to June. Nests in tunnels dug in earth banks. Lays 4-7 white eggs.}
-  {asian-green-bee-eater.jpg}
 
 \birdentry{Coppersmith Barbet}{\textit{Megalaima haemacephala}}
   {Bulbul+}
@@ -613,24 +548,6 @@ Under the following terms:
   {Nests in holes in trees, buildings, and other structures. Lays 4-6 blue-green eggs. Both parents share incubation duties for about 13-15 days and care for the chicks.}
   {common-myna.jpg}
 
-\birdentry{Jungle Myna}{\textit{Acridotheres fuscus}}
-  {Myna}
-  {Common resident}
-  {Similar to Common Myna but greyer, with tuft of feathers at base of bill. Orange-yellow bill and legs.}
-  {Found in wooded areas and gardens, less urban than Common Myna.}
-  {Usually in pairs or small groups. More arboreal than Common Myna. Feeds on insects and fruits.}
-  {Breeds March to July. Nests in tree holes. Lays 4-5 pale blue eggs.}
-  {jungle-myna.jpg}
-
-\birdentry{Brahminy Starling}{\textit{Sturnia pagodarum}}
-  {Myna}
-  {Common resident}
-  {Distinctive buff-colored starling with black crest, grey wings, and white underparts.}
-  {Found in wooded areas and gardens across campus.}
-  {Usually seen in pairs or small groups. Feeds on fruits, berries, and insects.}
-  {Breeds April to July. Nests in tree holes and building cavities. Lays 3-5 pale blue eggs.}
-  {brahminy-starling.jpg}
-
 \birdentry{Oriental Magpie-Robin}{\textit{Copsychus saularis}}
   {Bulbul}
   {Common resident}
@@ -639,15 +556,6 @@ Under the following terms:
   {Bold and melodious songster. Feeds on insects and berries.}
   {Breeds March to July. Nests in tree hollows and building holes. Lays 4-5 greenish-white eggs with brown spots.}
   {oriental-magpie-robin.jpg}
-
-\birdentry{Spot-breasted Fantail}{\textit{Rhipidura albogularis}}
-  {Sparrow-}
-  {Common resident}
-  {Small black and white bird with spotted breast, white eyebrow, and fan-shaped tail often held spread.}
-  {Found in wooded areas and gardens with good tree cover.}
-  {Active and acrobatic, frequently fans tail while foraging. Makes short aerial sallies to catch insects.}
-  {Breeds mainly March to September. Builds neat cup nest on tree branch. Lays 2-3 cream-colored eggs with reddish spots.}
-  {spot-breasted-fantail.jpg}
 
 \birdentry{Pied Bushchat}{\textit{Saxicola caprata}}
   {Bulbul-}
@@ -712,15 +620,6 @@ Under the following terms:
   {Breeds June to September. Builds ball-shaped nest in grass clumps. Lays 3-5 greenish-white eggs.}
   {jungle-prinia.jpg}
 
-\birdentry{Common Tailorbird}{\textit{Orthotomus sutorius}}
-  {Sparrow--}
-  {Common resident}
-  {Tiny warbler with long upright tail. Olive-green above, whitish below, rufous crown.}
-  {Found throughout campus in gardens and areas with dense bushes.}
-  {Active bird, constantly moving through vegetation. Loud 'to-wit to-wit' calls.}
-  {Breeds mainly May to September. Makes remarkable nest by stitching living leaves together. Lays 3-5 reddish-white eggs with spots.}
-  {common-tailorbird.jpg}
-
 \birdentry{Lesser Whitethroat}{\textit{Sylvia curruca}}
   {Sparrow-}
   {Common winter visitor}
@@ -775,15 +674,6 @@ Under the following terms:
   {Breeds July to October. Builds large ball nest in thorny bushes. Lays 4-6 white eggs.}
   {scaly-breasted-munia.jpg}
 
-\birdentry{Rufous Treepie}{\textit{Dendrocitta vagabunda}}
-  {Myna++}
-  {Common resident}
-  {Large rufous and black bird with long graduated tail. Grey neck and white-tipped tail distinctive.}
-  {Found in wooded areas across campus.}
-  {Bold and inquisitive. Often in small groups. Omnivorous, feeds on fruits, insects, and small vertebrates.}
-  {Breeds March to July. Builds neat cup nest in tree fork. Lays 3-5 greenish-white eggs with brown spots.}
-  {rufous-treepie.jpg}
-
 \birdentry{House Crow}{\textit{Corvus splendens}}
   {Crow}
   {Very common resident}
@@ -810,15 +700,6 @@ Under the following terms:
   {Active at dawn and dusk. Bobs head when alert. Feeds on insects, small vertebrates.}
   {Breeds February to April. Nests in tree hollows and old buildings. Lays 3-5 white eggs. Female incubates for 28-30 days while male provides food.}
   {spotted-owlet.jpg}
-
-\birdentry{Mottled Wood Owl}{\textit{Strix ocellata}}
-  {Crow+}
-  {Uncommon resident}
-  {Large owl with distinctive mottled brown plumage. Round head without ear-tufts, dark eyes, and yellow-green bill.}
-  {Found in wooded areas of campus with dense canopy cover.}
-  {Strictly nocturnal. Deep resonant calls at night. Feeds on rodents, birds, and large insects.}
-  {Breeds December to March. Nests in natural tree hollows. Lays 2-3 white eggs. Female incubates while male provides food.}
-  {mottled-wood-owl.jpg}
 
 \birdentry{Indian Grey Hornbill}{\textit{Ocyceros birostris}}
   {Crow}
@@ -864,69 +745,6 @@ Under the following terms:
   {Very active, flits rapidly between flowers. Feeds on berries and nectar.}
   {Breeds year-round, peak March to May. Builds pear-shaped hanging nest. Lays 2-3 white eggs. Both parents care for young.}
   {tickells-flowerpecker.jpg}
-
-\birdentry{Grey Wagtail}{\textit{Motacilla cinerea}}
-  {Sparrow}
-  {Common winter visitor}
-  {Slender bird with long tail, grey upper parts and bright yellow underparts. Shows constant tail-wagging behavior.}
-  {Found near water bodies and damp areas on campus.}
-  {Active forager, running and walking while wagging tail. Catches insects on ground and in air.}
-  {Does not breed on campus; winter visitor only.}
-  {grey-wagtail.jpg}
-
-\birdentry{White Wagtail}{\textit{Motacilla alba}}
-  {Sparrow}
-  {Common winter visitor}
-  {Black and white bird with grey back, white face and underparts. Shows characteristic tail-wagging.}
-  {Found in open areas, lawns, and near water bodies.}
-  {Walks gracefully on ground, wagging tail. Feeds on insects and small invertebrates.}
-  {Does not breed on campus; winter visitor only.}
-  {white-wagtail.jpg}
-
-\birdentry{White-browed Wagtail}{\textit{Motacilla maderaspatensis}}
-  {Sparrow+}
-  {Common resident}
-  {Large black and white wagtail with prominent white eyebrow. Long tail constantly wagged up and down.}
-  {Found near water bodies and open grassy areas across campus.}
-  {Active forager, running and walking while wagging tail. Often seen in pairs.}
-  {Breeds March to September. Builds cup nest in holes in walls or banks. Lays 3-4 greyish-white eggs with brown spots.}
-  {white-browed-wagtail.jpg}
-
-\birdentry{Common Iora}{\textit{Aegithina tiphia}}
-  {Sparrow-}
-  {Common resident}
-  {Male breeding bright yellow and black; non-breeding and female greenish-yellow. White wing-bars distinctive.}
-  {Found in wooded areas and gardens with good tree cover.}
-  {Active bird, constantly moving through foliage. Sweet melodious calls. Feeds mainly on insects.}
-  {Breeds April to September. Builds neat cup nest in tree fork. Lays 2-3 pinkish eggs with brown spots.}
-  {common-iora.jpg}
-
-\birdentry{Asian Tit}{\textit{Parus cinereus}}
-  {Sparrow-}
-  {Common resident}
-  {Small grey bird with black cap and throat, white cheeks, and pale underparts.}
-  {Found in wooded areas and gardens across campus.}
-  {Active and acrobatic, often hanging upside down while foraging. Feeds on insects and seeds.}
-  {Breeds March to July. Nests in tree holes. Lays 4-6 white eggs with red-brown spots.}
-  {asian-tit.jpg}
-
-\birdentry{Purple Sunbird}{\textit{Cinnyris asiaticus}}
-  {Sparrow--}
-  {Common resident}
-  {Male breeding metallic purple-black; non-breeding and female olive brown above, yellow below.}
-  {Found throughout campus wherever flowering plants occur.}
-  {Very active, hovers at flowers. Long curved bill for nectar feeding. Also catches small insects.}
-  {Breeds mainly February to May. Builds hanging purse-like nest. Lays 2-3 greenish-white eggs with brown spots.}
-  {purple-sunbird.jpg}
-
-\birdentry{Purple-rumped Sunbird}{\textit{Leptocoma zeylonica}}
-  {Sparrow--}
-  {Common resident}
-  {Male has metallic purple-blue upper parts, yellow belly. Female olive above, yellow below.}
-  {Found in gardens and wooded areas with flowering plants.}
-  {Very active, hovers at flowers like Purple Sunbird. Feeds on nectar and small insects.}
-  {Breeds year-round. Builds pendant nest with porch-like entrance. Lays 2 greenish-white eggs with brown spots.}
-  {purple-rumped-sunbird.jpg}
 
 \chapter*{Index}
 \addcontentsline{toc}{chapter}{Index}
