Add script to fix image paths and update Marathi bird guide PDF

--- a/latex/bird_guide_marathi.tex
+++ b/latex/bird_guide_marathi.tex
@@ -218,7 +218,7 @@
 % Add license text after title
 \begin{center}
 \vspace{1cm}
-{\large हे काम क्रिएटिव्ह कॉमन्स अट्रिब्यूशन-नॉनकमर्शियल-शेअरअलाइक ४.० आंतरराष्ट्रीय परवान्यांतर्गत (CC BY-NC-SA 4.0) उपलब्ध आहे.}
+{\large हे काम क्रिएटिव्ह कॉमन्स अट्रिब्यूशन-नॉनकमर्शियल-शेअरअलाइक ४.० आंतरराष्ट्रीय परवान्यांतर्गत ({\latintext CC BY-NC-SA 4.0}) उपलब्ध आहे.}
 
 \vspace{0.5cm}
 {\normalsize आपल्याला खालील गोष्टींची मुभा आहे:
@@ -276,7 +276,7 @@
 \vspace{1cm}
 %\chapter{पक्षी}
 
-\birdentry{काळी घार}{\textit{Milvus migrans}}
+\birdentry{घार}{\textit{Milvus migrans}}
   {घारीएवढा}
   {अतिसामान्य स्थानिक}
   {मोठा शिकारी पक्षी. काटेरी शेपटी आणि लांब पंख हे वैशिष्ट्य. पंख काळसर तपकिरी, तळाशी किंचित फिकट.}
@@ -285,7 +285,7 @@
   {डिसेंबर ते एप्रिल दरम्यान प्रजनन. उंच झाडांवर काड्या-कचऱ्यापासून घरटे. २-३ पांढरी, तपकिरी ठिपक्यांची अंडी. दोन्ही पालक अंडी उबवतात.}
   {black-kite.jpg}
 
-\birdentry{रामकंक}{\textit{Pseudibis papillosa}}
+\birdentry{काळा शराटी}{\textit{Pseudibis papillosa}}
   {घारीएवढा}
   {सामान्य स्थानिक}
   {मोठा काळा पक्षी, मानेवर लाल पट्टा. लांब वाकडी चोच आणि डोक्यावरील उघडा लाल भाग ठळक.}
@@ -294,7 +294,7 @@
   {पावसाळ्यात प्रजनन. मोठ्या झाडांवर मंचासारखे घरटे. २-४ फिकट निळसर-पांढरी अंडी.}
   {red-naped-ibis.jpg}
 
-\birdentry{लगार}{\textit{Falco peregrinus}}
+\birdentry{शाहीन ससाणा}{\textit{Falco peregrinus}}
   {घारीएवढा}
   {दुर्मिळ हिवाळी पाहुणा}
   {मोठा, शक्तिशाली ससाणा. वरचा भाग गडद करडा, खालून पट्टेदार. काळा 'मिशांसारखा' पट्टा विशिष्ट.}
@@ -312,7 +312,7 @@
   {मार्च ते जुलै प्रजनन काळ. झाडांवर काड्या-पानांचे घरटे. ३-४ निळसर पांढरी अंडी.}
   {shikra.jpg}
 
-\birdentry{पाणकोंबडी}{\textit{Amaurornis phoenicurus}}
+\birdentry{पांढऱ्या छातीची पाणकोंबडी}{\textit{Amaurornis phoenicurus}}
   {बुलबुलापेक्षा मोठी}
   {सामान्य स्थानिक}
   {मध्यम आकाराचा पक्षी. पांढरा चेहरा, गळा, छाती; गडद तपकिरी शरीर. चोचीजवळ लाल पट्टा.}
@@ -321,7 +321,7 @@
   {दाट वनस्पतीत घरटे. ४-६ क्रीमी पांढरी, तपकिरी ठिपक्यांची अंडी. दोन्ही पालक काळजी घेतात.}
   {white-breasted-waterhen.jpg}
 
-\birdentry{राणी बगळा}{\textit{Ardeola grayii}}
+\birdentry{ढोकरी}{\textit{Ardeola grayii}}
   {मैनेपेक्षा मोठा}
   {अतिसामान्य स्थानिक}
   {मध्यम आकाराचा बगळा. तपकिरी शरीर, पांढरे पंख. पिवळी चोच आणि पाय.}
@@ -330,7 +330,7 @@
   {जून ते सप्टेंबर प्रजनन काळ. पाण्याजवळील झाडांवर घरटे. ३-५ फिकट निळी अंडी.}
   {indian-pond-heron.jpg}
 
-\birdentry{रात्रीचा बगळा}{\textit{Nycticorax nycticorax}}
+\birdentry{रात्र ढोकरी}{\textit{Nycticorax nycticorax}}
   {कावळ्यापेक्षा मोठा}
   {दुर्मिळ स्थानिक}
   {मध्यम आकाराचा बगळा. काळी टोपी, पाठ; करडे पंख; पांढरा तळभाग. लाल डोळे, जाड चोच.}
@@ -348,7 +348,7 @@
   {जून ते सप्टेंबर प्रजनन काळ. वसाहतीत राहतो. ३-४ फिकट निळी अंडी.}
   {cattle-egret.jpg}
 
-\birdentry{लहान बगळा}{\textit{Egretta garzetta}}
+\birdentry{छोटा बगळा}{\textit{Egretta garzetta}}
   {मैनेपेक्षा मोठा}
   {सामान्य स्थानिक}
   {मध्यम आकाराचा शुभ्र पांढरा बगळा. काळी चोच, काळे पाय, पिवळे पंजे.}
@@ -366,7 +366,7 @@
   {वर्षभर प्रजनन. इमारतींवर काड्यांचे घरटे. २ पांढरी अंडी. दोन्ही पालक काळजी घेतात.}
   {blue-rock-pigeon.jpg}
 
-\birdentry{ठिपक्यांचा पारवा}{\textit{Streptopelia chinensis}}
+\birdentry{ठिपकेवाला होला}{\textit{Streptopelia chinensis}}
   {मैनेएवढा}
   {सामान्य स्थानिक}
   {बारीक, लांब शेपटीचा पारवा. गुलाबी-करडा रंग. मानेवर विशिष्ट काळे-पांढरे ठिपके.}
@@ -375,7 +375,7 @@
   {झाडे आणि झुडपांमध्ये सैल घरटे बांधतो. २ पांढरी अंडी. दोन्ही पालक १४-१६ दिवस अंडी उबवतात.}
   {spotted-dove.jpg}
 
-\birdentry{छोटा पारवा}{\textit{Streptopelia senegalensis}}
+\birdentry{छोटा तपकिरी होला}{\textit{Streptopelia senegalensis}}
   {मैनेपेक्षा लहान}
   {सामान्य स्थानिक}
   {लहान आणि नाजूक पारवा. फिकट तपकिरी रंग, मानेवर जांभळी छटा. मानेच्या बाजूंवर काळे-लाल चौकटी नमुना.}
@@ -384,7 +384,7 @@
   {झुडपे आणि लहान झाडांवर साधे घरटे. २ पांढरी अंडी. दोन्ही पालक १३-१५ दिवस अंडी उबवतात.}
   {little-brown-dove.jpg}
 
-\birdentry{लाल टिकली टिटवी}{\textit{Vanellus indicus}}
+\birdentry{टिटवी}{\textit{Vanellus indicus}}
   {मैनेपेक्षा बरीच मोठी}
   {सामान्य स्थानिक}
   {मोठी टिटवी. डोळ्यांसमोर लाल मांसल वाढ विशिष्ट. तपकिरी पंख, काळे डोके व छाती, पांढरा चेहरा व तळभाग.}
@@ -393,7 +393,7 @@
   {जमिनीवर उथळ खड्ड्यात घरटे. खडकाळ भागात. ३-४ जैतूनी-तपकिरी अंडी. दोन्ही पालक २८-३० दिवस उबवतात.}
   {red-wattled-lapwing.jpg}
 
-\birdentry{कोकिळा}{\textit{Eudynamys scolopacea}}
+\birdentry{कोकीळ}{\textit{Eudynamys scolopacea}}
   {कावळ्यापेक्षा लहान}
   {सामान्य स्थानिक}
   {नर चमकदार काळा, लाल डोळे. मादी तपकिरी, पांढरे ठिपके, खालून पट्टेदार. लिंगभेद स्पष्ट.}
@@ -402,7 +402,7 @@
   {कावळे व इतर पक्ष्यांच्या घरट्यात परजीवी म्हणून अंडी घालतो.}
   {asian-koel.jpg}
 
-\birdentry{करडा कोकीळ}{\textit{Cacomantis passerinus}}
+\birdentry{कारुण्य कोकीळ}{\textit{Cacomantis passerinus}}
   {मैनेपेक्षा लहान}
   {उन्हाळी पाहुणा}
   {करडा पक्षी, छातीवर गडद करडा रंग, तळाशी फिकट. पिवळा डोळ्याभोवतीचा कडा विशिष्ट.}
@@ -411,7 +411,7 @@
   {फुलपाखरे व शिंपी पक्ष्यांच्या घरट्यात परजीवी म्हणून अंडी घालतो.}
   {grey-bellied-cuckoo.jpg}
 
-\birdentry{चातक}{\textit{Hierococcyx varius}}
+\birdentry{पावश्या}{\textit{Hierococcyx varius}}
   {मैनेपेक्षा बराच मोठा}
   {सामान्य स्थानिक}
   {शिक्र्यासारखा दिसणारा. खालून पट्टेदार. पिवळा डोळ्याभोवतीचा कडा. उडताना शिक्र्यासारखा दिसतो.}
@@ -438,7 +438,7 @@
   {डिसेंबर ते मे प्रजनन. झाडांच्या पोकळीत घरटे. ३-४ पांढरी अंडी. दोन्ही पालक २२-२४ दिवस उबवतात.}
   {rose-ringed-parakeet.jpg}
 
-\birdentry{पेडगी पोपट}{\textit{Psittacula eupatria}}
+\birdentry{करण पोपट}{\textit{Psittacula eupatria}}
   {कावळ्याएवढा}
   {दुर्मिळ स्थानिक}
   {राजपोपटापेक्षा मोठा. जाड लाल चोच. नराला गुलाबी व काळा गळपट्टा.}
@@ -447,7 +447,7 @@
   {मोठ्या जुन्या झाडांच्या पोकळीत घरटे. २-४ पांढरी अंडी. दोन्ही पालक २३-२६ दिवस उबवतात.}
   {alexandrine-parakeet.jpg}
 
-\birdentry{जांभळा डोका पोपट}{\textit{Psittacula cyanocephala}}
+\birdentry{टोई पोपट}{\textit{Psittacula cyanocephala}}
   {मैनेएवढा}
   {सामान्य स्थानिक}
   {नराचे डोके जांभळे-लाल, मादीचे निळसर-करडे. दोघांचेही शरीर हिरवे व पिवळट शेपटीचे टोक.}
@@ -456,7 +456,7 @@
   {झाडांच्या पोकळीत घरटे. काळ स्थानपरत्वे बदलतो. ३-४ पांढरी अंडी. दोन्ही पालक २२-२४ दिवस उबवतात.}
   {plum-headed-parakeet.jpg}
 
-\birdentry{घरचा घारांडी}{\textit{Apus affinis}}
+\birdentry{घर पाकोळी}{\textit{Apus affinis}}
   {मैनेपेक्षा लहान}
   {अतिसामान्य स्थानिक}
   {लहान घारांडी, पांढरी कंबर व काटेरी शेपटी. गडद तपकिरी-काळा रंग.}
@@ -465,7 +465,7 @@
   {वसाहतीत राहणारा. इमारतींच्या छपराखाली मातीचे घरटे. २-३ पांढरी अंडी. दोन्ही पालक १९-२१ दिवस उबवतात.}
   {house-swift.jpg}
 
-\birdentry{ताडमाळ घारांडी}{\textit{Cypsiurus balasiensis}}
+\birdentry{ताड पाकोळी}{\textit{Cypsiurus balasiensis}}
   {चिमणीपेक्षा लहान}
   {सामान्य स्थानिक}
   {घरच्या घारांडीपेक्षा लहान, बारीक शरीर व खोलगट काटेरी शेपटी. एकूण धुरकट तपकिरी.}
@@ -474,16 +474,16 @@
   {वर्षभर प्रजनन. ताडाच्या पानाखाली लाळेने घरटे चिकटवतो. २-३ पांढरी अंडी घालतो.}
   {asian-palm-swift.jpg}
 
-\birdentry{खंड्या}{\textit{Halcyon smyrnensis}}
+\birdentry{पांढऱ्या छातीचा धीवर}{\textit{Halcyon smyrnensis}}
   {मैनेपेक्षा मोठा}
   {सामान्य स्थानिक}
-  {मोठा खंड्या, चमकदार निळी पाठ, चॉकलेटी डोके व पांढरी छाती. मोठी लाल चोच ठळक.}
+  {मोठा खंड्या, चमकदार निळी पाठ, चॉकलेटी डोके व पांwhite-breasted-waterhen.jpgढरी छाती. मोठी लाल चोच ठळक.}
   {परिसरातील पाणवठे व बागा}
   {ठळकपणे बसून राहतो, शिकारीसाठी झडप घालतो. मासे, बेडूक, सरडे व मोठे कीटक खातो.}
   {मार्च ते जून प्रजनन. जमिनीच्या कडेत भुयार खणून घरटे. ४-७ पांढरी अंडी. दोन्ही पालक २०-२२ दिवस उबवतात.}
   {white-breasted-kingfisher.jpg}
 
-\birdentry{नीळकंठ}{\textit{Alcedo atthis}}
+\birdentry{सामान्य धीवर}{\textit{Alcedo atthis}}
   {बुलबुलापेक्षा लहान}
   {सामान्य स्थानिक}
   {लहान खंड्या, चमकदार निळी वरची बाजू व केशरी खालची बाजू. लांब चोच व छोटी शेपटी.}
@@ -510,7 +510,7 @@
   {मेलेल्या झाडांच्या खोडात किंवा फांदीत घरटे खणतो. २-४ पांढरी अंडी. दोन्ही पालक १३-१५ दिवस उबवतात.}
   {coppersmith-barbet.jpg}
 
-\birdentry{खडी घारूळी}{\textit{Hirundo concolor}}
+\birdentry{धूसर कडा पंकोळी}{\textit{Hirundo concolor}}
   {चिमणीपेक्षा लहान}
   {सामान्य स्थानिक}
   {लहान, गडद तपकिरी घारूळी, किंचित काटेरी शेपटी. एकसमान धुरकट रंग.}
@@ -519,7 +519,7 @@
   {इमारतींवर व खडकांवर मातीचे वाटीसारखे घरटे. २-३ पांढरी अंडी. दोन्ही पालक १४-१६ दिवस उबवतात.}
   {dusky-crag-martin.jpg}
 
-\birdentry{होलोखेल घारूळी}{\textit{Hirundo rustica}}
+\birdentry{माळ भिंगरी}{\textit{Hirundo rustica}}
   {चिमणीएवढी}
   {सामान्य हिवाळी पाहुणा}
   {लांब, खोल काटेरी शेपटी. वर निळसर-काळी, कपाळ व गळा तांबूस, खालून फिकी.}
@@ -528,7 +528,7 @@
   {परिसरात प्रजनन करत नाही; फक्त हिवाळी पाहुणी.}
   {barn-swallow.jpg}
 
-\birdentry{तांबट घारूळी}{\textit{Hirundo daurica}}
+\birdentry{लाल पुठूठ्याची भिंगरी}{\textit{Hirundo daurica}}
   {चिमणीएवढी}
   {सामान्य स्थानिक}
   {होलोखेल घारूळीसारखी पण तांबूस कंबर व छोट्या शेपटीची पिसे.}
@@ -537,7 +537,7 @@
   {इमारतींखाली बाटलीसारखे मातीचे घरटे. ३-४ पांढरी अंडी. दोन्ही पालक १४-१६ दिवस उबवतात.}
   {red-rumped-swallow.jpg}
 
-\birdentry{तारघारूळी}{\textit{Hirundo smithii}}
+\birdentry{तारबाली भिंगरी}{\textit{Hirundo smithii}}
   {चिमणीएवढी}
   {सामान्य स्थानिक}
   {ठळक तारेसारखी लांब शेपटीची पिसे. चमकदार निळसर-काळी वर, पांढरी खाली.}
@@ -546,7 +546,7 @@
   {पुलांखाली व इमारतींवर मातीचे वाटीसारखे घरटे. २-३ पांढरी अंडी. दोन्ही पालक १४-१६ दिवस उबवतात.}
   {wire-tailed-swallow.jpg}
 
-\birdentry{लांबपुच्छी खंजीर}{\textit{Lanius schach}}
+\birdentry{लांब पुच्छी खंजीर}{\textit{Lanius schach}}
   {बुलबुलापेक्षा मोठा}
   {सामान्य स्थानिक}
   {करडा-तपकिरी वरचा भाग, खालून पांढरा. डोळ्यातून काळी पट्टी. लांब टोकदार शेपटी.}
@@ -555,7 +555,7 @@
   {काटेरी झुडपात नीटनेटके घरटे बांधतो. ३-६ पांढरी, तपकिरी ठिपक्यांची अंडी. दोन्ही पालक १५-१६ दिवस उबवतात.}
   {long-tailed-shrike.jpg}
 
-\birdentry{सोनेरी होला}{\textit{Oriolus oriolus}}
+\birdentry{हळद्या}{\textit{Oriolus oriolus}}
   {मैनेपेक्षा मोठा}
   {सामान्य स्थानिक}
   {नर सोनेरी पिवळा, काळे पंख व शेपटी. मादी फिकट हिरवी.}
@@ -564,7 +564,7 @@
   {झाडाच्या फांदीवर झोळीसारखे घरटे. २-४ पांढरी, तांबूस ठिपक्यांची अंडी. दोन्ही पालक १४-१६ दिवस उबवतात.}
   {golden-oriole.jpg}
 
-\birdentry{कृष्ण भारद्वाज}{\textit{Dicrurus macrocercus}}
+\birdentry{कोतवाल}{\textit{Dicrurus macrocercus}}
   {मैनेपेक्षा मोठा}
   {सामान्य स्थानिक}
   {चमकदार काळा पक्षी, काटेरी शेपटी. जाड वाकडी चोच.}
@@ -573,7 +573,7 @@
   {मार्च ते जुलै प्रजनन. बाह्य फांदीवर वाटीसारखे घरटे. ३-५ गुलाबी-पांढरी, तांबूस ठिपक्यांची अंडी.}
   {black-drongo.jpg}
 
-\birdentry{राखी भारद्वाज}{\textit{Dicrurus leucophaeus}}
+\birdentry{राखी कोतवाल}{\textit{Dicrurus leucophaeus}}
   {मैनेपेक्षा मोठा}
   {हिवाळी पाहुणा}
   {कृष्ण भारद्वाजासारखा पण एकूण करडा रंग. कमी काटेरी शेपटी.}
@@ -591,7 +591,7 @@
   {झाडांच्या व इमारतींच्या पोकळीत घरटे. ४-६ निळसर-हिरवी अंडी. दोन्ही पालक १३-१५ दिवस उबवतात.}
   {common-myna.jpg}
 
-\birdentry{वनमैना}{\textit{Acridotheres fuscus}}
+\birdentry{जंगली मैना}{\textit{Acridotheres fuscus}}
   {मैना}
   {सामान्य स्थानिक}
   {सामान्य मैनेसारखी पण अधिक करडी. चोचीजवळ पिसांची झुपके. नारिंगी-पिवळी चोच व पाय.}
@@ -600,7 +600,7 @@
   {मार्च ते जुलै प्रजनन. झाडांच्या पोकळीत घरटे. ४-५ फिकट निळी अंडी.}
   {jungle-myna.jpg}
 
-\birdentry{ब्राह्मणी मैना}{\textit{Sturnia pagodarum}}
+\birdentry{भांगपाडी मैना}{\textit{Sturnia pagodarum}}
   {मैना}
   {सामान्य स्थानिक}
   {विशिष्ट बदामी रंगाची मैना, काळी टोपी, करडे पंख व पांढरा तळभाग.}
@@ -615,10 +615,10 @@
   {नर काळा-पांढरा ठळक रंगसंगती, मादी अधिक करडी. लांब शेपटी वर धरतो.}
   {परिसरातील वृक्षराजी व बागांमध्ये सर्वत्र}
   {धीट व गोड आवाजी गायक. कीटक व बेरी खातो.}
-  {मार्च ते जुलै प्रजनन. झाडांच्या व इमारतींच्या पोकळीत घरटे. ४-५ हिरवट-पांढरी, तपकिरी ठिपक्यांची अंडी.}
+  {मार्च ते जुलै प्रजनन. झाडांच्या व इमारतींच्या पोकळीत घरटे. ४-५ हिरवट-पांwhite-breasted-waterhen.jpgढरी, तपकिरी ठिपक्यांची अंडी.}
   {oriental-magpie-robin.jpg}
 
-\birdentry{ठिपक्यांची फुलपाखरू}{\textit{Rhipidura albogularis}}
+\birdentry{पांढऱ्या कंठाची नाचण}{\textit{Rhipidura albogularis}}
   {चिमणीपेक्षा लहान}
   {सामान्य स्थानिक}
   {लहान काळा-पांढरा पक्षी, ठिपकेदार छाती, पांढरी भुवई व पंख्यासारखी शेपटी पसरून ठेवतो.}
@@ -636,7 +636,7 @@
   {मार्च ते ऑगस्ट प्रजनन. गवतात व झुडपात वाटीसारखे घरटे. ३-४ फिकट निळसर-हिरवी, तांबूस ठिपक्यांची अंडी.}
   {pied-bushchat.jpg}
 
-\birdentry{लाल-शेपटी बुलबुल}{\textit{Pycnonotus cafer}}
+\birdentry{लाल बुड्या बुलबुल}{\textit{Pycnonotus cafer}}
   {बुलबुल}
   {अतिसामान्य स्थानिक}
   {गडद तपकिरी-काळा पक्षी, खवल्यांसारखी रचना, लाल मूळशेपटी व काळी शिखा विशिष्ट.}
@@ -645,7 +645,7 @@
   {वर्षभर प्रजनन, फेब्रुवारी ते मे शिखर. झुडपात वाटीसारखे घरटे. २-३ गुलाबी-पांढरी, तपकिरी ठिपक्यांची अंडी. दोन्ही पालक १४ दिवस उबवतात.}
   {red-vented-bulbul.jpg}
 
-\birdentry{लाल-कानांचा बुलबुल}{\textit{Pycnonotus jocosus}}
+\birdentry{शिपाई बुलबुल}{\textit{Pycnonotus jocosus}}
   {बुलबुल}
   {सामान्य स्थानिक}
   {तपकिरी वरचा भाग, पांढरा खालचा भाग. लाल कानपट्टी व टोकदार काळी शिखा विशिष्ट.}
@@ -654,7 +654,7 @@
   {झुडपात व लहान झाडांवर नीटनेटके वाटीसारखे घरटे. २-३ गुलाबी-पांढरी, तपकिरी ठिपक्यांची अंडी. दोन्ही पालक १२-१४ दिवस उबवतात.}
   {red-whiskered-bulbul.jpg}
 
-\birdentry{मोठा खडकचिमटा}{\textit{Turdoides malcolmi}}
+\birdentry{राखी सातभाई}{\textit{Turdoides malcolmi}}
   {मैनेपेक्षा मोठा}
   {सामान्य स्थानिक}
   {करडा-तपकिरी पक्षी, फिकट रेघा. लांब टप्प्याटप्प्यांची शेपटी व वाकडी चोच.}
@@ -663,7 +663,7 @@
   {मार्च ते सप्टेंबर प्रजनन. काटेरी झुडपात अस्ताव्यस्त घरटे. ३-४ निळसर अंडी. गटातील सदस्य मदत करतात.}
   {large-grey-babbler.jpg}
 
-\birdentry{टिकेल निळा फुलपाखरू}{\textit{Muscicapa tickelliae}}
+\birdentry{टिकेलची निळी माशीमार}{\textit{Muscicapa tickelliae}}
   {बुलबुलापेक्षा लहान}
   {सामान्य स्थानिक}
   {नर चमकदार निळा वरून, तांबूस खालून. मादी फिकट.}
@@ -681,7 +681,7 @@
   {मुख्यतः जून ते सप्टेंबर प्रजनन. गवतात व झुडपात खोल वाटीसारखे घरटे. ३-५ विटकरी अंडी.}
   {ashy-prinia.jpg}
 
-\birdentry{जंगली वटवट्या}{\textit{Prinia sylvatica}}
+\birdentry{रान वटवट्या}{\textit{Prinia sylvatica}}
   {चिमणीपेक्षा लहान}
   {सामान्य स्थानिक}
   {करडा-तपकिरी वरचा भाग, फिकट खालचा भाग. राखी वटवट्यापेक्षा गडद.}
@@ -699,7 +699,7 @@
   {मुख्यतः मे ते सप्टेंबर प्रजनन. जिवंत पानांना शिवून अद्भुत घरटे बनवतो. ३-५ तांबूस-पांढरी, ठिपक्यांची अंडी.}
   {common-tailorbird.jpg}
 
-\birdentry{लहान पांढऱ्या गळ्याची सुतार}{\textit{Sylvia curruca}}
+\birdentry{छोटा शुभ्रकंठी वटवट्या}{\textit{Sylvia curruca}}
   {चिमणीपेक्षा लहान}
   {सामान्य हिवाळी पाहुणा}
   {छोटा सुतार पक्षी, करडा-तपकिरी वरचा भाग, पांढरा गळा व खालचा भाग. डोळ्यातून काळी पट्टी.}
@@ -708,7 +708,7 @@
   {परिसरात प्रजनन करत नाही; फक्त हिवाळी पाहुणा.}
   {lesser-whitethroat.jpg}
 
-\birdentry{घरचिमणी}{\textit{Passer domesticus}}
+\birdentry{चिमणी}{\textit{Passer domesticus}}
   {चिमणी}
   {अतिसामान्य स्थानिक}
   {नर करडा-तपकिरी, काळा गळपट्टा व तांबूस मान; मादी एकसमान तपकिरी.}
@@ -717,7 +717,7 @@
   {जवळपास वर्षभर प्रजनन. इमारतींच्या पोकळीत घरटे. ४-६ पांढरी, तपकिरी ठिपक्यांची अंडी.}
   {house-sparrow.jpg}
 
-\birdentry{बया}{\textit{Ploceus philippinus}}
+\birdentry{सुगरण}{\textit{Ploceus philippinus}}
   {चिमणी}
   {सामान्य स्थानिक}
   {प्रजननकाळात नर चमकदार पिवळा, तपकिरी पाठ; मादी चिमणीसारखी.}
@@ -735,7 +735,7 @@
   {मार्च ते सप्टेंबर प्रजनन. भिंतीच्या भेगा व जमिनीत घरटे. २-४ पांढरी, तपकिरी ठिपक्यांची अंडी.}
   {indian-robin.jpg}
 
-\birdentry{गांधारी}{\textit{Zosterops palpebrosus}}
+\birdentry{चष्मेबाला}{\textit{Zosterops palpebrosus}}
   {चिमणीपेक्षा लहान}
   {सामान्य स्थानिक}
   {छोटा जैतुनी-हिरवा पक्षी, डोळ्याभोवती पांढरा कडा विशिष्ट. पिवळा गळा व शेपटीखालचा भाग.}
@@ -744,7 +744,7 @@
   {मार्च ते सप्टेंबर प्रजनन. झाडाच्या फांदीवर नीटनेटके वाटीसारखे घरटे. २-४ फिकट निळी अंडी.}
   {oriental-white-eye.jpg}
 
-\birdentry{टिपकेरी मुनिया}{\textit{Lonchura punctulata}}
+\birdentry{ठिपकेवाली मनोली}{\textit{Lonchura punctulata}}
   {चिमणीपेक्षा लहान}
   {सामान्य स्थानिक}
   {लहान तपकिरी फिंच, छातीवर खवल्यांसारखी रचना. जाड छोटी चोच.}
@@ -753,7 +753,7 @@
   {जुलै ते ऑक्टोबर प्रजनन. काटेरी झुडपात मोठे चेंडूसारखे घरटे. ४-६ पांढरी अंडी.}
   {scaly-breasted-munia.jpg}
 
-\birdentry{लांबशेपटी काक}{\textit{Dendrocitta vagabunda}}
+\birdentry{टकाचोर}{\textit{Dendrocitta vagabunda}}
   {मैनेपेक्षा बराच मोठा}
   {सामान्य स्थानिक}
   {मोठा तांबूस व काळा पक्षी, लांब टप्प्याटप्प्यांची शेपटी. करडी मान व पांढऱ्या टोकांची शेपटी विशिष्ट.}
@@ -762,7 +762,7 @@
   {मार्च ते जुलै प्रजनन. झाडाच्या फांदीवर नीटनेटके वाटीसारखे घरटे. ३-५ हिरवट-पांढरी, तपकिरी ठिपक्यांची अंडी.}
   {rufous-treepie.jpg}
 
-\birdentry{शहरी कावळा}{\textit{Corvus splendens}}
+\birdentry{कावळा}{\textit{Corvus splendens}}
   {कावळा}
   {अतिसामान्य स्थानिक}
   {करडा व काळा कावळा, विशिष्ट करड्या मानेचा पट्टा.}
@@ -771,7 +771,7 @@
   {मार्च ते जुलै प्रजनन. झाडांवर मंचासारखे घरटे. ४-५ फिकट निळसर-हिरवी, तपकिरी ठिपक्यांची अंडी.}
   {house-crow.jpg}
 
-\birdentry{जंगली कावळा}{\textit{Corvus macrorhynchos}}
+\birdentry{डोमकावळा}{\textit{Corvus macrorhynchos}}
   {कावळ्यापेक्षा मोठा}
   {सामान्य स्थानिक}
   {शहरी कावळ्यापेक्षा मोठा, संपूर्ण काळा, जाड चोच. एकांडा स्वभाव.}
@@ -789,7 +789,7 @@
   {फेब्रुवारी ते एप्रिल प्रजनन. झाडांच्या पोकळीत व जुन्या इमारतींमध्ये घरटे. ३-५ पांढरी अंडी. नर अन्न आणतो, मादी २८-३० दिवस अंडी उबवते.}
   {spotted-owlet.jpg}
 
-\birdentry{ठिपक्यांचा घुबड}{\textit{Strix ocellata}}
+\birdentry{ठिपकेवाला वन घुबड}{\textit{Strix ocellata}}
   {कावळ्यापेक्षा मोठा}
   {दुर्मिळ स्थानिक}
   {मोठा घुबड, विशिष्ट ठिपकेदार तपकिरी पिसारा. गोल डोके, कान-शिखा नाहीत. काळे डोळे, पिवळट-हिरवी चोच.}
@@ -807,7 +807,7 @@
   {मार्च ते जून प्रजनन. मादी स्वतःला झाडाच्या पोकळीत कोंडून घेते, एक छोटी फट सोडते. नर तिला व पिलांना खाऊ घालतो. २-४ पांढरी अंडी.}
   {indian-grey-hornbill.jpg}
 
-\birdentry{नीळकंठ}{\textit{Coracias benghalensis}}
+\birdentry{नीलकंठ}{\textit{Coracias benghalensis}}
   {मैनेपेक्षा बराच मोठा}
   {सामान्य स्थानिक}
   {कावळ्याएवढा पक्षी, चमकदार निळे पंख व शेपटी. तपकिरी डोके व पाठ.}
@@ -816,7 +816,7 @@
   {मार्च ते जुलै प्रजनन. झाडांच्या पोकळीत घरटे. ३-५ पांढरी अंडी. दोन्ही पालक १७-१९ दिवस उबवतात.}
   {indian-roller.jpg}
 
-\birdentry{काळ्या डोक्याचा निलाई}{\textit{Coracina melanoptera}}
+\birdentry{काळ्या डोक्याचा कोकीळ-खाटिक}{\textit{Coracina melanoptera}}
   {मैनेपेक्षा मोठा}
   {सामान्य स्थानिक}
   {नर करडा, काळे डोके; मादी करडी, फिकट आडव्या रेघांसह.}
@@ -834,7 +834,7 @@
   {मार्च ते जून प्रजनन. फांदीवर छोटे वाटीसारखे घरटे. २-४ फिकट हिरवी, तपकिरी ठिपक्यांची अंडी.}
   {small-minivet.jpg}
 
-\birdentry{टिकेल फुलपक्षी}{\textit{Dicaeum erythrorhynchos}}
+\birdentry{टिकेलचा फुलटोचा}{\textit{Dicaeum erythrorhynchos}}
   {चिमणीपेक्षा बराच लहान}
   {सामान्य स्थानिक}
   {अतिलहान पक्षी, करडा-तपकिरी वर, मळकट पांढरा खाली. छोटी शेपटी व वाकडी चोच.}
@@ -843,7 +843,7 @@
   {वर्षभर प्रजनन, मार्च ते मे शिखर. नाशपातीसारखे लटकते घरटे. २-३ पांढरी अंडी. दोन्ही पालक पिलांची काळजी घेतात.}
   {tickells-flowerpecker.jpg}
 
-\birdentry{राखी हलवा}{\textit{Motacilla cinerea}}
+\birdentry{करडा धोबी}{\textit{Motacilla cinerea}}
   {चिमणी}
   {सामान्य हिवाळी पाहुणा}
   {बारीक पक्षी, लांब शेपटी, करडा वरचा भाग व पिवळा खालचा भाग. सतत शेपटी हलवत राहतो.}
@@ -852,7 +852,7 @@
   {परिसरात प्रजनन करत नाही; फक्त हिवाळी पाहुणा.}
   {grey-wagtail.jpg}
 
-\birdentry{पांढरा हलवा}{\textit{Motacilla alba}}
+\birdentry{पांढरा धोबी}{\textit{Motacilla alba}}
   {चिमणी}
   {सामान्य हिवाळी पाहुणा}
   {काळा-पांढरा पक्षी, करडी पाठ, पांढरा चेहरा व खालचा भाग. सतत शेपटी हलवतो.}
@@ -861,7 +861,7 @@
   {परिसरात प्रजनन करत नाही; फक्त हिवाळी पाहुणा.}
   {white-wagtail.jpg}
 
-\birdentry{पांढऱ्या भुवयांचा हलवा}{\textit{Motacilla maderaspatensis}}
+\birdentry{पांढऱ्या भुबईचा धोबी}{\textit{Motacilla maderaspatensis}}
   {चिमणीपेक्षा मोठा}
   {सामान्य स्थानिक}
   {मोठा काळा-पांढरा हलवा, ठळक पांढरी भुवई. लांब शेपटी सतत वर-खाली हलवतो.}
@@ -870,7 +870,7 @@
   {मार्च ते सप्टेंबर प्रजनन. भिंतींच्या व कड्यांच्या भेगांमध्ये वाटीसारखे घरटे. ३-४ करडी-पांढरी, तपकिरी ठिपक्यांची अंडी.}
   {white-browed-wagtail.jpg}
 
-\birdentry{चांदी}{\textit{Aegithina tiphia}}
+\birdentry{सुभग}{\textit{Aegithina tiphia}}
   {चिमणीपेक्षा लहान}
   {सामान्य स्थानिक}
   {प्रजननकाळात नर चमकदार पिवळा व काळा; इतर वेळी व मादी हिरवट-पिवळी. पांढरे पंखपट्टे विशिष्ट.}
@@ -879,7 +879,7 @@
   {एप्रिल ते सप्टेंबर प्रजनन. फांदीत नीटनेटके वाटीसारखे घरटे. २-३ गुलाबी अंडी, तपकिरी ठिपके.}
   {common-iora.jpg}
 
-\birdentry{राखी चिमणी}{\textit{Parus cinereus}}
+\birdentry{कवडी रामगंगा}{\textit{Parus cinereus}}
   {चिमणीपेक्षा लहान}
   {सामान्य स्थानिक}
   {छोटा करडा पक्षी, काळी टोपी व गळा, पांढरे गाल व खालचा भाग.}
@@ -888,7 +888,7 @@
   {मार्च ते जुलै प्रजनन. झाडांच्या पोकळीत घरटे. ४-६ पांढरी, लाल-तपकिरी ठिपक्यांची अंडी.}
   {asian-tit.jpg}
 
-\birdentry{जांभळा सूर्यपक्षी}{\textit{Cinnyris asiaticus}}
+\birdentry{जांभळा शिंजीर}{\textit{Cinnyris asiaticus}}
   {चिमणीपेक्षा बराच लहान}
   {सामान्य स्थानिक}
   {प्रजननकाळात नर चमकदार जांभळा-काळा; इतर वेळी व मादी जैतुनी-तपकिरी वर, पिवळी खाली.}
@@ -897,7 +897,7 @@
   {मुख्यतः फेब्रुवारी ते मे प्रजनन. झोळीसारखे लटकते घरटे. २-३ हिरवट-पांढरी, तपकिरी ठिपक्यांची अंडी.}
   {purple-sunbird.jpg}
 
-\birdentry{जांभळी-कंबर सूर्यपक्षी}{\textit{Leptocoma zeylonica}}
+\birdentry{जांभळ्या पुठ्ठ्याचा शिंजीर}{\textit{Leptocoma zeylonica}}
   {चिमणीपेक्षा बराच लहान}
   {सामान्य स्थानिक}
   {नराचा वरचा भाग चमकदार जांभळा-निळा, पोट पिवळे. मादी जैतुनी वर, पिवळी खाली.}
